Fixed a thing that could happen when the screen was really small involving homely scrollbars.

--- a/pre/public/css/index.styl
+++ b/pre/public/css/index.styl
@@ -182,15 +182,17 @@
 					width 60%
 					margin-top 15px
 					margin-bottom 10px
+					overflow hidden
 					h3
 						font-weight bold
 						font-style italic
 						font-size 17px
 						margin-bottom 5px
+						overflow hidden
 					article p
 						line-height 1.5
 						height 100px
-						overflow-y hidden
+						overflow hidden
 
 				.preview
 					float right
